# camerademo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  setup.cfg  setup.py
src/: __init__.py  main.py
src/ai/: __init__.py  text_generator.py
src/camera/: __init__.py  camera_manager.py
src/gui/: __init__.py  ai_settings_dialog.py  editor_window.py  main_window.py  preview_widget.py  settings_dialog.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_camera.py  test_camera_manager.py  test_editor.py  test_editor_window.py  test_text_generator.py
