chcp 65001

[metadata]
name = camera-app
version = 0.1.0
description = A camera application with AI text generation capability
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python>=4.8.1
    numpy>=1.24.3
    PyQt5>=5.15.9
    requests>=2.31.0
    Pillow>=10.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-qt>=4.2.0
    pytest-cov>=4.1.0

[options.entry_points]
console_scripts =
    camera-app = src.main:main